# ml-tracker

./: .gitignore  Cargo.toml  README.md  SPEC.md
benches/: metrics_bench.rs
examples/: basic_tracking.rs  custom_metrics.rs  distributed_training.rs
src/: error.rs  experiment.rs  experiment_tracker.rs  lib.rs  run.rs
src/artifacts/: manager.rs  mod.rs  types.rs
src/metrics/: logger.rs  mod.rs  store.rs  system.rs
src/storage/: local.rs  mod.rs  s3.rs
src/storage/database/: mod.rs  schema.rs
src/storage/database/migrations/: 20240101000000_initial.sql
src/ui/: cli.rs
tests/common/: mod.rs
tests/integration/: experiment_test.rs  metrics_test.rs  storage_test.rs
