[package]
name = "ml-tracker"
version = "0.1.0"
edition = "2021"
authors = ["Kolden Axelson <KoldenAxelson@Protonmail.com>"]
description = "A Rust-native ML experiment tracking system"
license = "MIT"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1.77"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }
object_store = "0.9"
aws-sdk-s3 = { version = "1.1", optional = true }
metrics = "0.21"
metrics-util = "0.15"
systemstat = "0.2"
thiserror = "1.0"
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
dialoguer = "0.11"
console = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
tempfile = "3.8"
blake3 = "1.5"

[dev-dependencies]
tokio-test = "0.4"
assert_fs = "1.0"
predicates = "3.0"
rstest = "0.18"
criterion = "0.5"
anyhow = "1.0"
tempfile = "3.8"

[[test]]
name = "integration"
path = "tests/common/mod.rs"

[[bench]]
name = "metrics_bench"
harness = false

[features]
default = ["sqlite"]
sqlite = []
s3 = ["dep:aws-sdk-s3"]

[[example]]
name = "basic_tracking"
path = "examples/basic_tracking.rs"

[[example]]
name = "distributed_training"
path = "examples/distributed_training.rs"

[[example]]
name = "custom_metrics"
path = "examples/custom_metrics.rs"
